# bfm-fi-company-client

./: .gitignore  README.md  __init__.py  pyproject.toml
app/: client.py
app/protos/: company_pb2.py  company_pb2_grpc.py
app/protos/company/: company_pb2.py  company_pb2_grpc.py
app/services/: company.py
bfm_fi_company_client/: client.py  company_service_pb2.py  company_service_pb2_grpc.py
